--- a/views/registruokis.pug
+++ b/views/registruokis.pug
@@ -11,7 +11,7 @@ block content
     section.register.container
         p
             | Norėdami užsiregistruoti į kursus galite skambinti telefonu: +370 650 22483 ar užpildę formą apačioje.
-        p Po formos užpildymo mes su jumis susisieksime per 2 darbo dienas.
+        p Po formos užpildymo mes su jumis susisieksime per 1 darbo dieną.
         h3.msg-heading= msg
         form(method="post" action='registruokis')
             label(for='name') Jūsų vardas
