--- a/views/galerija.pug
+++ b/views/galerija.pug
@@ -22,11 +22,13 @@ block content
             img(src='images/gallery/thumb/6.png', alt='')
         a(href='images/gallery/siuveja-daiva-v3.jpeg', data-lightbox='mygallery', data-title='Siuvėja Daiva  ')
             img(src='images/gallery/thumb/7.png', alt='')
-        a(href='images/gallery/siuveja-rasita-v1.jpg', data-lightbox='mygallery', data-title='Siuvėja Daiva  ')
+        a(href='images/gallery/siuveja-daiva-v1', data-lightbox='mygallery', data-title='Siuvėja Daiva  ')
             img(src='images/gallery/thumb/8.png', alt='')
-        a(href='images/gallery/siuveja-rasita-v.jpg', data-lightbox='mygallery', data-title='Siuvėja Daiva  ')
+        a(href='images/gallery/siuveja-daiva-v', data-lightbox='mygallery', data-title='Siuvėja Daiva  ')
             img(src='images/gallery/thumb/9.png', alt='')
         a(href='images/gallery/siuveja-rasita-v5.jpg', data-lightbox='mygallery', data-title='Siuvėja Rasita ')
             img(src='images/gallery/thumb/10.png', alt='')
+        a(href='images/gallery/siuveja-rasita-v11.jpg', data-lightbox='mygallery', data-title='Siuvėja Rasita ')
+            img(src='images/gallery/thumb/11.png', alt='')
 
     include includes/footer.pug
