--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -12,20 +12,20 @@ footer
           |  Rasita Dragūnienė
         li
           img(src='images/icons/smartphone-gold.png')
-          |  +370 650 22483
+          a(href='tel:+37065022483') +370 650 22483
         li
           img(src='images/icons/send-gold.png')
-          |  rasita@rdsiuvykla.lt
+          a(href='mailto:rasita@rdsiuvykla.lt') rasita@rdsiuvykla.lt
       ul
         li
           img(src='images/icons/user.png')
           |  Daiva Tarvydaite Znakoviene
         li
           img(src='images/icons/smartphone-gold.png')
-          |  +370 650 22483
+          a(href='tel:+37065022483') +370 650 22483
         li
           img(src='images/icons/send-gold.png')
-          |  daiva@rdsiuvykla.lt
+          a(href='mailto:daiva@rdsiuvykla.lt') daiva@rdsiuvykla.lt
     .footer-duk.footer-box
       h2 D.U.K
       ul
