--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title RDsiuvykla.lt
+    title=title
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/normalize.css')
     link(rel='stylesheet', href='/stylesheets/lightbox.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
