--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -6,7 +6,7 @@ section#connect
           img(src='images/icons/smartphone.png')
           |  +370 650 22483
       li
-        a(href='#')
+        a(href='mailto:info@rdsiuvykla.lt')
           img(src='images/icons/send.png')
           |  info@rdsiuvykla.lt
     h1.connect-logo Rdsiuvykla
