--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title=title
+    meta(charset='UTF-8')
+    meta(name='description', content='RDSiuvykla.LT Siuvimo kursai Šiauliuose! Siuvimo kursai tiek neturintiems žinių, tiek pažengusiems!')
+    meta(name='keywords', content='siuvimo kursai, siuvimo kursai siauliuose, siuvimo paslaugos, siuvimo paslaugos siauliuose, drabuziu siuvimas, drabuziu siuvimas siauliuose')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/normalize.css')
     link(rel='stylesheet', href='/stylesheets/lightbox.min.css')
