update-mobile-friendly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,19 +93,17 @@ a {
     .connect-social {
         display: none;
     }
-    .connect-container .connect-logo {
-        background-color: #BFA16B;
-
-        position: absolute;
-        top: 0;
-        left: 35%;
-        transform: translate(-0, -42%);
-
-        height: 51px;
-    }
-
     .connect-logo {
+        background-color: #BFA16B;
+        margin: 0;
+        margin-left: auto;
+        margin-right: auto;
+
+        width: 50%;
+        height: 51px;
         color: #23232D;
+        text-align: center;
+        align-self: center;
     }
 
     .connect-container h1 {
@@ -233,13 +231,13 @@ header {
     flex-direction: column;
     justify-content: center;
 
-    padding: 0 50px;
+    padding: 0 20px;
 
     text-align: center;
 }
 
     .about-info {
-        padding-left: 30px;
+        /* padding-left: 30px; */
     }
 
     .about-image {
@@ -253,11 +251,12 @@ header {
         margin-right: auto;
 
         height: 300px;
-        width: 300px;
+        width: 100%;
     }
 
     .about-image img {
         height: 100%;
+        width: 100%;
     }
 
     .about-image::after {
@@ -314,7 +313,7 @@ header {
         flex-direction: column;
         justify-content: center;
     
-        padding: 0 50px;
+        /* padding: 0 50px; */
     
         text-align: center;
 }
@@ -334,6 +333,10 @@ header {
 
     .courses-btn a {
         margin-top: 10px;
+    }
+
+    .courses-image img {
+        width: 100%;
     }
 
 /* Sewing services */
@@ -618,10 +621,8 @@ table {
 
 
     .connect-container .connect-logo {
-        position: absolute;
-        top: 0;
-        left: 43%;
-        transform: translate(-0, -42%);
+        width: 15%;
+        margin-left: 20%;
     }
 
     .connect-social li,
@@ -698,6 +699,19 @@ table {
         text-align: left;
     }
 
+    .about-image {
+        width: 300px;
+        height: 300px;
+    }
+
+    .about-image img {
+        width: 300px;
+        height: 300px;
+    }
+
+    .about-info {
+        padding-left: 30px;
+    }
     /* Courses */
     .courses-box {
         display: flex;
@@ -723,6 +737,14 @@ table {
     .box {
         display: inline;
         margin-left: 15px;
+    }
+
+    #courses-container {
+        padding-left: 0 50px;
+    }
+
+    .courses-image img {
+        width: 350px;
     }
 
         /* Footer */
