--- a/views/index.pug
+++ b/views/index.pug
@@ -13,8 +13,10 @@ block content
     .about-info
       h1 Apie Mus
       p
-        | Rdsiuvykla.lt – esame neseniai įsikūrusi siuvimo mokykla. Pagrindinės mūsų teikiamos paslaugos siuvimo kursai:
+        | Rdsiuvykla.lt – teikiame visas siuvimo pasluagas. Siuname pagal individualius užsakymus. Mūsų teikiamos paslaugos:
       ul.about-info-ul
+        li  * Visos siuvimo paslaugos. 
+        li  * Drabužių taisymo paslaugos.
         li  * Siuvimo Kursai pradedantiesiems. 
         li  * Siuvimo kursai pažengusiems. 
         li  * Individualios/ vienkartinės konsultacijos.
