--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -35,7 +35,7 @@ nav
 
 header
   .header-text-container.container
-    h1 SIUVIMO KURSAI
-    h2 Siuvimo kursai pradedantiesiems
-    p Siuvimo kursai pagal programą pradedantiesiems yra skirti nemokantiems siūti...
+    h1 SIUVIMO PASLAUGOS
+    h2 Visos siuvimo paslaugos
+    p Teikiame visas siuvimo paslaugas, bei kursus
     a.btn.courses-btn(href='/registruokis') REGISTRUOKIS
