--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
     .about-info
       h1 Apie Mus
       p
-        | Rdsiuvykla.lt – teikiame visas siuvimo pasluagas. Siuname pagal individualius užsakymus. Mūsų teikiamos paslaugos:
+        | Rdsiuvykla.lt – teikiame visas siuvimo pasluagas. Siuname pagal individualius užsakymus.
       ul.about-info-ul
         li  * Visos siuvimo paslaugos. 
         li  * Drabužių taisymo paslaugos.
